--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ const db = firebase.database();
 // QUI METTEREMO TUTTA LA PIANTINA DOPO
 const layout = [
 
- // ================== BLOCCO A | B ==================
+ // ================== A | B (in alto) ==================
  ["A1","A2","A3","A4","A5","A6","A7","A8","|","B1","B2","B3","B4","B5","B6","B7","B8",""],
  ["A9","A10","A11","A12","A13","A14","A15","A16","A17","|","B9","B10","B11","B12","B13","B14","B15","B16","B17"],
  ["A18","A19","A20","A21","A22","A23","A24","A25","A26","|","B18","B19","B20","B21","B22","B23","B24","B25","B26"],
@@ -54,7 +54,7 @@ const layout = [
  ["A81","A82","A83","A84","A85","A86","A87","A88","A89","|","B81","B82","B83","B84","B85","B86","B87","B88","B89"],
  ["A90","A91","A92","A93","A94","A95","A96","A97","A98","|","B90","B91","B92","B93","B94","B95","B96","B97","B98"],
 
- // ================== BLOCCO C | D ==================
+ // ================== C | D (in basso, a scaletta) ==================
  ["","C2","C3","C4","C5","C6","C7","C8","C9","|","D1","D2","D3","D4","D5","D6","D7","D8","D9"],
  ["","C10","C11","C12","C13","C14","C15","C16","C17","|","D10","D11","D12","D13","D14","D15","D16","D17","D18"],
  ["","C18","C19","C20","C21","C22","C23","C24","C25","C26","|","D19","D20","D21","D22","D23","D24","D25","D26","D27"],
@@ -68,6 +68,7 @@ const layout = [
  ["","C86","C87","","C88","C89","C90","C91","C92","C93","|","D89","D90","D91","D92","D93","D94","","D95","D96"]
 
 ];
+
 
 
 
