--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <meta charset="UTF-8">
 <title>Saggio di Danza – Mappa Posti</title>
 <style>
-body{font-family:Arial;background:#111;color:#fff;text-align:center}
+body<div id="stage">PALCO</div>
+<div id="map">
+  <img src="piantina.jpg" id="bg">
+</div>
+
 .stage{margin:10px auto;padding:10px;background:#444;width:70%}
 .row{display:flex;justify-content:center;margin:4px}
 .seat{width:32px;height:32px;border-radius:50%;background:green;cursor:pointer;
