--- a/index.html
+++ b/index.html
@@ -16,7 +16,34 @@ font-size:7px;display:flex;align-items:center;justify-content:center;margin:2px;
 .seat.occ{background:red}
 .gap{width:40px}
 .stats{margin:10px}
-</style>
+</style>#map{
+  position:relative;
+  width:100%;
+  max-width:900px;
+  margin:auto;
+}
+#bg{ width:100%; display:block; }
+
+.seat{
+  position:absolute;
+  width:22px;
+  height:22px;
+  border-radius:50%;
+  background:#2ecc71;
+  color:white;
+  font-size:9px;
+  text-align:center;
+  line-height:22px;
+  cursor:pointer;
+}
+.occ{ background:#e74c3c; }
+
+#stage{
+  text-align:center;
+  font-weight:bold;
+  margin:10px;
+}
+
 </head>
 <body>
 
